# robot

./: .gitignore  .replit  Makefile  main.py  pyproject.toml  replit.nix
src/: api.py  utils.py
static/: index.html  main.js  scenario.html  scenario.js
