[tool.poetry]
name = "robots"
version = "0.1.0"
description = ""
authors = ["Aurelien Ribon <aurelien.ribon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
fastapi = "^0.103.1"
google-cloud-texttospeech = "^2.14.1"
openai = "^0.28.0"
pydub = "^0.25.1"
python = "^3.11"
uvicorn = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
