[tool.poetry]
name = "robots"
version = "0.1.0"
description = ""
authors = ["Aurelien Ribon <aurelien.ribon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
auto-mix-prep = "^0.2.0"
fastapi = "^0.103.1"
google-cloud-texttospeech = "^2.14.1"
openai = "^0.28.0"
python = "^3.10"
python-multipart = "^0.0.6"
uvicorn = "^0.23.2"
xds-protos = "^1.58.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
